<!--10 Mei 2022-->
<!--10119175-->
<!--Mochamad Galih Prasetya-->
<!--IF-5-->
<resources>
    <string name="app_name">MySelf Is Galih</string>
    <string name="title_home">Home</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_daily">Daily</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music_video">Media</string>

    <string name="nim">10119175</string>
    <string name="age">21</string>
    <string name="jurusan_kelas">Teknik Informatika - 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Selamat Datang!</string>
    <string name="title_interest">Interest</string>
    <string name="full_name">Mochamad Galih Prasetya</string>
    <string name="title_aboutme">About Me</string>
    <string name="aboutme">Game Design Enthusiasm \nFrom Kabupaten Bogor \nInterest in developing and playing game</string>
    <string name="title_contactme">Contact Me</string>
    <string name="about">About</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_findme">Find Me</string>
    <string name="latitude">-6.474438</string>
    <string name="longitude">106.840938</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW5rYWRhZmkiLCJhIjoiY2wzYmNreTNpMDZhajNpbzI1OXIxdGc0OSJ9.Z5utRR5YyOlXMCjdRqnRtw</string>
</resources>