<?xml version="1.0" encoding="utf-8"?>

<!--10 Mei 2022-->
<!--10119175-->
<!--Mochamad Galih Prasetya-->
<!--IF-5-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/daily"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_music_video"
        android:icon="@drawable/media"
        android:title="@string/title_music_video" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>